fixed table to work on mobile.  Added media queries

--- a/services.css
+++ b/services.css
@@ -14,10 +14,14 @@ thead th #services-table-header{
     background-color: #212529;
 
 }
+main .container-fluid{
+    min-width: 320px;
+}
 
 /*Local Nav*/
 .local-nav-font{
     font-size: 1.1em;
+    align-content: center;
 }
 
 
@@ -83,7 +87,7 @@ table thead tr th a:hover {
     border-bottom: 2px solid #8165E5;
 }
 .educationPackage .col-md-6.seoVideoClass
- {
+{
     padding-left: 0px;
 }
 .hostingPlans .container {
@@ -98,7 +102,10 @@ table thead tr th a:hover {
 .col-md-12.buildingYourPresence {
     padding-left: 0px;
 }
-@media (min-width: 320px) and (max-width: 480px) {
+
+
+
+@media (min-width: 320px) and (max-width: 534px) {
     .buildingYourPresence {
         text-align: center;
         padding: 3%;
@@ -128,53 +135,61 @@ table thead tr th a:hover {
         margin: 0;
     }
     .servicesTable {
-        padding-top: 6%;
-        overflow-x:hidden;
+        display: none;
     }
     th a {
         font-size: 11px;
     }
-  }
-  
-  @media (min-width: 320px) and (max-width: 380px) {
-    table.table.table-bordered {
-        margin-left: -18px;
+    .local-nav-font{
+        font-size: .7em;
     }
-    .servicesTable table thead tr th a {
-        font-size: 8px;
+    table thead tr th.table-header{
+        font-size: .8em;
     }
-	.educationPackage .col-md-6.seoVideoClass
-	 {
-		padding-left: 15px;
-	}
-	.maintenancePlan .col-md-6.maintenancePlanDiv {
-		padding-left: 15px;
-	}
-	.col-md-12.buildingYourPresence {
-		padding-left: 15px;
-	}	
-  }
-  @media (min-width: 481px) and (max-width: 767px) {
+    table tbody tr td.feature{
+        font-size: .8em;
+    }
+    tbody tr td.package-content{
+        font-size: .8em;
+    }
+    section.pricing.py-5{
+        margin: auto;
+    }
+    table tbody{
+        background-color: #fff;
+    }
+    table{
+        width: 100%;
+        margin: auto;
+        border-collapse: collapse;
+    }
+}
+
+
+@media (min-width: 535px) and (max-width: 767px) {
     .card-body ul.fa-ul li {
         margin-left: 0%;
     }
-		.educationPackage .col-md-6.seoVideoClass
-	 {
-		padding-left: 15px;
-	}
-	.hostingPlans .container {
-		padding-left: 15px;
-	}
-	.hostingPlans .col-md-8 {
-		padding-left: 15px;
-	}
-	.maintenancePlan .col-md-6.maintenancePlanDiv {
-		padding-left: 15px;
-	}
-	.col-md-12.buildingYourPresence {
-		padding-left: 15px;
-	}
-  }
+    .educationPackage .col-md-6.seoVideoClass
+    {
+        padding-left: 15px;
+    }
+    .hostingPlans .container {
+        padding-left: 15px;
+    }
+    .hostingPlans .col-md-8 {
+        padding-left: 15px;
+    }
+    .maintenancePlan .col-md-6.maintenancePlanDiv {
+        padding-left: 15px;
+    }
+    .col-md-12.buildingYourPresence {
+        padding-left: 15px;
+    }
+    .servicesTable {
+        font-size: .8em;
+    }
+}
 
 /* Font Awesome Icon Styling */
 .check {
